# mcp-server-master

./: .gitignore  LAB.md  README.md  brave.py  brave_search_results.json  client.py  example.env  pyproject.toml  server.py  tarif.csv  test_data.db
data/: tariff.csv
teams/lab/: server.py
