[project]
name = "mcp-server-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "google-genai>=1.19.0",
    "langchain-google-genai>=2.1.5",
    "langchain-mcp-adapters>=0.1.4",
    "langchain[openai]>=0.3.25",
    "langgraph>=0.4.7",
    "mcp[cli]>=1.9.2",
]
